# wasm-cli-runner

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
tests/: cli.rs  test.rs
tests/snapshots/: cli__has_a_version.snap  cli__path_ends_with_wasm.snap.new  cli__path_is_reachable_on_disk.snap  cli__path_is_required.snap
